crates/kreuzberg-ffi/include/kreuzberg.h

typedef struct KREUZBERGByteBufferPool KREUZBERGByteBufferPool;
typedef struct KREUZBERGChunkingConfig KREUZBERGChunkingConfig;
typedef struct KREUZBERGChunkingResult KREUZBERGChunkingResult;
typedef struct KREUZBERGContentFilterConfig KREUZBERGContentFilterConfig;
typedef struct KREUZBERGDocumentStructure KREUZBERGDocumentStructure;
typedef struct KREUZBERGEmailExtractionResult KREUZBERGEmailExtractionResult;
typedef struct KREUZBERGEmbeddingConfig KREUZBERGEmbeddingConfig;
typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGHierarchyConfig KREUZBERGHierarchyConfig;
typedef struct KREUZBERGHtmlMetadata KREUZBERGHtmlMetadata;
typedef struct KREUZBERGHtmlOutputConfig KREUZBERGHtmlOutputConfig;
typedef struct KREUZBERGImageExtractionConfig KREUZBERGImageExtractionConfig;
typedef struct KREUZBERGImagePreprocessingConfig KREUZBERGImagePreprocessingConfig;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLanguageDetectionConfig KREUZBERGLanguageDetectionConfig;
typedef struct KREUZBERGLayoutDetectionConfig KREUZBERGLayoutDetectionConfig;
typedef struct KREUZBERGOcrConfig KREUZBERGOcrConfig;
typedef struct KREUZBERGOcrQualityThresholds KREUZBERGOcrQualityThresholds;
typedef struct KREUZBERGPaddleOcrConfig KREUZBERGPaddleOcrConfig;
typedef struct KREUZBERGPageConfig KREUZBERGPageConfig;
typedef struct KREUZBERGPdfConfig KREUZBERGPdfConfig;
typedef struct KREUZBERGPostProcessorConfig KREUZBERGPostProcessorConfig;
typedef struct KREUZBERGRakeParams KREUZBERGRakeParams;
typedef struct KREUZBERGServerConfig KREUZBERGServerConfig;
typedef struct KREUZBERGStringBufferPool KREUZBERGStringBufferPool;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
char *kreuzberg_content_filter_config_to_json(const KREUZBERGContentFilterConfig *ptr);
void kreuzberg_content_filter_config_free(KREUZBERGContentFilterConfig *ptr);
KREUZBERGExtractionConfig *kreuzberg_extraction_config_from_json(const char *json);
char *kreuzberg_extraction_config_to_json(const KREUZBERGExtractionConfig *ptr);
void kreuzberg_extraction_config_free(KREUZBERGExtractionConfig *ptr);
char *kreuzberg_image_extraction_config_to_json(const KREUZBERGImageExtractionConfig *ptr);
void kreuzberg_image_extraction_config_free(KREUZBERGImageExtractionConfig *ptr);
KREUZBERGLanguageDetectionConfig *kreuzberg_language_detection_config_from_json(const char *json);
void kreuzberg_language_detection_config_free(KREUZBERGLanguageDetectionConfig *ptr);
char *kreuzberg_html_output_config_to_json(const KREUZBERGHtmlOutputConfig *ptr);
void kreuzberg_html_output_config_free(KREUZBERGHtmlOutputConfig *ptr);
char *kreuzberg_layout_detection_config_to_json(const KREUZBERGLayoutDetectionConfig *ptr);
void kreuzberg_layout_detection_config_free(KREUZBERGLayoutDetectionConfig *ptr);
char *kreuzberg_ocr_quality_thresholds_to_json(const KREUZBERGOcrQualityThresholds *ptr);
void kreuzberg_ocr_quality_thresholds_free(KREUZBERGOcrQualityThresholds *ptr);
char *kreuzberg_ocr_config_to_json(const KREUZBERGOcrConfig *ptr);
void kreuzberg_ocr_config_free(KREUZBERGOcrConfig *ptr);
char *kreuzberg_page_config_to_json(const KREUZBERGPageConfig *ptr);
void kreuzberg_page_config_free(KREUZBERGPageConfig *ptr);
char *kreuzberg_pdf_config_to_json(const KREUZBERGPdfConfig *ptr);
void kreuzberg_pdf_config_free(KREUZBERGPdfConfig *ptr);
char *kreuzberg_hierarchy_config_to_json(const KREUZBERGHierarchyConfig *ptr);
void kreuzberg_hierarchy_config_free(KREUZBERGHierarchyConfig *ptr);
char *kreuzberg_post_processor_config_to_json(const KREUZBERGPostProcessorConfig *ptr);
void kreuzberg_post_processor_config_free(KREUZBERGPostProcessorConfig *ptr);
KREUZBERGChunkingConfig *kreuzberg_chunking_config_from_json(const char *json);
char *kreuzberg_chunking_config_to_json(const KREUZBERGChunkingConfig *ptr);
void kreuzberg_chunking_config_free(KREUZBERGChunkingConfig *ptr);
char *kreuzberg_embedding_config_to_json(const KREUZBERGEmbeddingConfig *ptr);
void kreuzberg_embedding_config_free(KREUZBERGEmbeddingConfig *ptr);
char *kreuzberg_server_config_to_json(const KREUZBERGServerConfig *ptr);
void kreuzberg_server_config_free(KREUZBERGServerConfig *ptr);
KREUZBERGTokenReductionConfig *kreuzberg_token_reduction_config_from_json(const char *json);
void kreuzberg_token_reduction_config_free(KREUZBERGTokenReductionConfig *ptr);
char *kreuzberg_document_structure_to_json(const KREUZBERGDocumentStructure *ptr);
void kreuzberg_document_structure_free(KREUZBERGDocumentStructure *ptr);
KREUZBERGExtractionResult *kreuzberg_extraction_result_from_json(const char *json);
char *kreuzberg_extraction_result_to_json(const KREUZBERGExtractionResult *ptr);
void kreuzberg_extraction_result_free(KREUZBERGExtractionResult *ptr);
char *kreuzberg_email_extraction_result_to_json(const KREUZBERGEmailExtractionResult *ptr);
void kreuzberg_email_extraction_result_free(KREUZBERGEmailExtractionResult *ptr);
char *kreuzberg_image_preprocessing_config_to_json(const KREUZBERGImagePreprocessingConfig *ptr);
void kreuzberg_image_preprocessing_config_free(KREUZBERGImagePreprocessingConfig *ptr);
KREUZBERGHtmlMetadata *kreuzberg_html_metadata_from_json(const char *json);
char *kreuzberg_html_metadata_to_json(const KREUZBERGHtmlMetadata *ptr);
void kreuzberg_html_metadata_free(KREUZBERGHtmlMetadata *ptr);
void kreuzberg_string_buffer_pool_free(KREUZBERGStringBufferPool *ptr);
void kreuzberg_byte_buffer_pool_free(KREUZBERGByteBufferPool *ptr);
char *kreuzberg_chunking_result_to_json(const KREUZBERGChunkingResult *ptr);
void kreuzberg_chunking_result_free(KREUZBERGChunkingResult *ptr);
char *kreuzberg_rake_params_to_json(const KREUZBERGRakeParams *ptr);
void kreuzberg_rake_params_free(KREUZBERGRakeParams *ptr);
KREUZBERGKeywordConfig *kreuzberg_keyword_config_from_json(const char *json);
char *kreuzberg_keyword_config_to_json(const KREUZBERGKeywordConfig *ptr);
void kreuzberg_keyword_config_free(KREUZBERGKeywordConfig *ptr);
char *kreuzberg_paddle_ocr_config_to_json(const KREUZBERGPaddleOcrConfig *ptr);
void kreuzberg_paddle_ocr_config_free(KREUZBERGPaddleOcrConfig *ptr);